production/microk8s.1.25/observability.ingress.alertmanager.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-main-ingress
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: alertmanager.k8s.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kube-prom-stack-kube-prome-alertmanager
              port:
                number: 443
